# openCLEM

./: .gitignore  README.md  mkdocs.yml  openclem.code-workspace  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: index.md
openclem/: _version.py  acquire.py  config.py  connection.py  detector.py  laser.py  microscope.py  notebook.ipynb  notes.md  objective.py  structures.py  synchronisation.py  trigger.py  utils.py  xlightv2.py
openclem/config/: piedisc.yaml  piedisc_copy.yaml  system.yaml
openclem/detectors/: basler.py
openclem/lasers/: example.py  iCLE.py  ldi.py
openclem/microscopes/: base.py  config.yml  example.py  piedisc.py
openclem/spinning_disk/: demo_disk.py  xlightv2.py
openclem/triggers/: arduino.py
openclem/ui/: CLEMDetectorWidget.py  CLEMHardwareWidget.py  CLEMImageWidget.py  CLEMLaserWidget.py  CLEMObjectiveWidget.py  CLEMUI.py  OpenLMSpinningDiskWidget.py
openlm/: acquire.py  config.py  connection.py  continuous_wavelet_transforms.py  detector.py  laser.py  microscope.py  structures.py  synchronisation.py  utils.py  workflow.py
openlm/config/: piedisc.yaml  piedisc_copy.yaml  vis_config.yml
openlm/microscopes/: base.py  example.py  piedisc.py
scratch/: cells_3D.ipynb  detector_test.py  fourier_padding copy.ipynb  fourier_padding.ipynb  imports.ipynb  notebook.ipynb  openclem.code-workspace  pycwt correlation copy.ipynb  pycwt correlation.ipynb  stitching.ipynb  stitching_and_FFC.ipynb  test.py  test_microscope.py  threading_abstraction.py  threading_test.py  wavelet_transforms.ipynb  wavelet_transforms.py  wavelets_presentation.ipynb  workflow_generator.ipynb  xlight.py
tests/: test_detector.py  test_example.py  test_structures.py
(+92 files in other folders)
