[metadata]
name = openclem
version = 0.1.0
author = David Dierickx
author_email = David.Dierickx1@monash.edu
description = python api for advanced fibsem control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeMarcoLab/openclem
project_urls =
    Bug Tracker = https://github.com/DeMarcoLab/openclem/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    numpy
    pyserial
    pyyaml
    napari
# extras_require =
#     dev = 
#         pytest
#         coverage
#     doc =
#         mkdocs-material 
#         mkdocstrings-python