[metadata]
name = openlm
version = 0.1.0
author = David Dierickx
author_email = David.Dierickx1@monash.edu
description = a universal api for light microscopy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeMarcoLab/openlm
project_urls =
    Bug Tracker = https://github.com/DeMarcoLab/openlm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    numpy
    pyserial
    pyyaml
    napari
# extras_require =
#     dev = 
#         pytest
#         coverage
#     doc =
#         mkdocs-material 
#         mkdocstrings-python

[options.entry_points]
console_scripts =
    openlm_ui = openlm.ui.OpenLMUI:main